s14 c1 nqp - Correction alignement du footer en format mobile

--- a/sass/composantes/_footer.scss
+++ b/sass/composantes/_footer.scss
@@ -6,7 +6,6 @@
     display : flex;
     flex-direction: column;
     justify-content: space-between;
-    // box-shadow: red;
 
     /** Taille d'écran pour les écrans mobiles */
     @media screen and (max-width: 200px){
@@ -34,7 +33,12 @@
 
 }
 
+.footer__article{
+  margin-top: 5vh;
+}
+
 .footer__adresse{
+  margin-top: 5vh;
 
   /** Taille d'écran pour les écrans mobiles */
   @media screen and (max-width: 200px){
@@ -47,6 +51,7 @@
 }
 
 .footer__liens{
+  margin-top: 5vh;
 
   /** Taille d'écran pour les écrans mobiles */
   @media screen and (min-width: 200px){
